package pattern_examples.interpreter_pattern_example;

//abstract expression
public interface Expression {
    Integer interpret();
}
