@startuml

title __INTERPRETER_PATTERN_EXAMPLE's Class Diagram__\n

  namespace pattern_examples.interpreter_pattern_example {
    class pattern_examples.interpreter_pattern_example.Context {
        ~ evaluate()
    }
  }
  

  namespace pattern_examples.interpreter_pattern_example {
    interface pattern_examples.interpreter_pattern_example.Expression {
        {abstract} + interpret()
    }
  }
  

  namespace pattern_examples.interpreter_pattern_example {
    class pattern_examples.interpreter_pattern_example.Main {
        {static} + main()
    }
  }
  

  namespace pattern_examples.interpreter_pattern_example {
    class pattern_examples.interpreter_pattern_example.MinusExpression {
        + MinusExpression()
        + interpret()
    }
  }
  

  namespace pattern_examples.interpreter_pattern_example {
    class pattern_examples.interpreter_pattern_example.NumberExpression {
        ~ number : int
        + NumberExpression()
        + interpret()
    }
  }
  

  namespace pattern_examples.interpreter_pattern_example {
    class pattern_examples.interpreter_pattern_example.PlusExpression {
        + PlusExpression()
        + interpret()
    }
  }
  

  pattern_examples.interpreter_pattern_example.MinusExpression .up.|> pattern_examples.interpreter_pattern_example.Expression
  pattern_examples.interpreter_pattern_example.MinusExpression o-- pattern_examples.interpreter_pattern_example.Expression : left
  pattern_examples.interpreter_pattern_example.MinusExpression o-- pattern_examples.interpreter_pattern_example.Expression : right
  pattern_examples.interpreter_pattern_example.NumberExpression .up.|> pattern_examples.interpreter_pattern_example.Expression
  pattern_examples.interpreter_pattern_example.PlusExpression .up.|> pattern_examples.interpreter_pattern_example.Expression
  pattern_examples.interpreter_pattern_example.PlusExpression o-- pattern_examples.interpreter_pattern_example.Expression : left
  pattern_examples.interpreter_pattern_example.PlusExpression o-- pattern_examples.interpreter_pattern_example.Expression : right


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
